<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newGame.NewGameFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/startNumberTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/start_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/startNumberEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/startNumberEditText" />

            <EditText
                android:id="@+id/startNumberEditText"
                android:layout_width="264dp"
                android:layout_height="43dp"
                android:ems="10"
                android:text="1"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/classicGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classicGameButton_label" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_classic_game_description" />

        <Button
            android:id="@+id/hybrisGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hybrisGameButton_label" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_hybrid_game_description" />

        <Button
            android:id="@+id/modernGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modernGameButton_label" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_modern_game_description" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>